SMS-14 SMS-11 basics of the billing interface